<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="testing_tutorial_link">&lt;b>View a Tutorial&lt;/b></string>
    <string name="testing_header_1">Test 1 of 3</string>
    <string name="testing_header_2">Test 2 of 3</string>
    <string name="testing_header_3">Test 3 of 3</string>
    <string name="button_call">CALL</string>
    <string name="button_email">EMAIL</string>
    <string name="button_done">DONE</string>
    <string name="notification1_lastday">You\'re on the last day of testing this week! Your first test of the day will be available until {TIME}.</string>
    <string name="notification3_variation">Here\'s another chance to earn money and help science Please complete test #3 by {TIME}.</string>
    <string name="notification_missedtests">You\'ve missed your tests. If you\'re unable \nto finish this week, please contact your study coordinator.</string>
    <string name="about_linked">About This App</string>
    <string name="login_2FA_body">We\'ve sent a security code to your phone with number ending in &lt;b>{##}&lt;/b>.</string>
    <string name="login_2FA_text">Your ARC security code is {######}.</string>
    <string name="onboarding_notifications_popup">&lt;b>Please tap "allow"&lt;/b> so we can tell you when tests are available.</string>
    <string name="onboarding_notifications_body2_ios">You must turn on notifications for the study to function properly. Please visit the Settings App, tap Notifications, then tap [APP NAME] and turn on the Allow Notifications switch.</string>
    <string name="onboarding_notifications_body2_android">You must turn on notifications for the study to function properly. Please go to Settings and make sure notifications for [APP NAME] are turned on.</string>
    <string name="availability_change_week">What week are you able to test?</string>
    <string name="availability_change_week_confirm">Great! Your next testing cycle will be &lt;b>{DATE1}&lt;/b> through &lt;b>{DATE2}&lt;/b>.</string>
    <string name="idverify_body">Please sign your initials on the line below to verify your identity.</string>
    <string name="home_body_6">There are no more tests to take.</string>
    <string name="faq_tech_q6">What is the Test Scheduler Service?</string>
    <string name="faq_tech_q7">Why am I getting a message telling me to close other apps?</string>
    <string name="faq_tech_a6">During testing weeks, you may see a notification that the Test Scheduler Service is running. This service allows us to send you testing notifications at specific times. Since this is required for the study, it cannot be disabled.\n\nThe Test Scheduler Service will only run during testing weeks and will not significantly impact the battery life of your phone.</string>
    <string name="faq_tech_a7">You may see this message appear during a test session: “Please close other apps to improve performance.” This may mean your device is not capable of running other apps at the same time as EXR. For the best performance, please close other apps before starting a test session.</string>
    <string name="progess_finishdate">Estimated Finish Date</string>
    <string name="progress_cycledates">{DATE1}-{DATE2}</string>
    <string name="earnings_details_currenttotal">Current Total</string>
    <string name="testing_interrupted_header">&lt;b>Thanks!&lt;/b></string>
    <string name="grids_overlay2">Next: Tap on the F\'s</string>
    <string name="progress_earnings_header">&lt;b>Total Earnings&lt;/b></string>
    <string name="progress_earnings_body1">This Week</string>
    <string name="progress_earnings_body2">Study Total</string>
    <string name="progress_goal_header">&lt;b>Goal Progress&lt;/b></string>
    <string name="overlay_nextcycle">&lt;b>Your next testing cycle will be {DATE1} through {DATE2}.&lt;/b> \n\nPlease confirm these testing dates or adjust your schedule.</string>
    <string name="progress_studycomplete_header">&lt;b>You\'ve Finish the Study!&lt;/b></string>
    <string name="progress_studytotals_header">&lt;b>Study Totals&lt;/b></string>
    <string name="progress_studytotals_body">Your study coordinator will be in touch shortly with further instructions. In the meantime, check out all you accomplished:</string>
    <string name="progress_studytotals_earned">Total Earned</string>
    <string name="progress_studytotals_tests">Tests Taken</string>
    <string name="progress_studytotals_days">Days Tested</string>
    <string name="progress_studytotals_goals">Goals Met</string>
    <string name="progress_endoftest_syncing">Just a moment while we update your earnings&#8230;</string>
    <string name="button_sendnewcode">SEND NEW CODE</string>
    <string name="button_submitdates">SUBMIT DATES</string>
    <string name="button_okay">OKAY</string>
    <string name="button_returntohome">RETURN TO HOME</string>
    <string name="popup_showmore">SHOW MORE</string>
    <string name="popup_next">Next</string>
    <string name="popup_done">Done</string>
    <string name="low_memory_restart_dialogue">&lt;b>Oops&lt;/b>\nYour device is not capable of running other apps at the same time as {APPNAME}. Please close other apps before starting a test session.</string>
    <string name="radio_0">0</string>
    <string name="radio_1">1</string>
    <string name="radio_2">2</string>
    <string name="radio_3">3</string>
    <string name="radio_4">4</string>
    <string name="radio_5">5</string>
    <string name="radio_6">6</string>
    <string name="radio_7">7</string>
    <string name="time_format">h:mm a</string>
    <string name="okay">Okay</string>
    <string name="thank_you_header1">Thank you!</string>
    <string name="thankyou_testcomplete_subhead1">Test Complete</string>
    <string name="thankyou_testcomplete_body1">You\'ll get a notification later today when your next test is available.</string>
    <string name="thankyou_header2">Great Job</string>
    <string name="thankyou_header3">Congratulations</string>
    <string name="thankyou_finished_subhead3">You\'ve Finished the Study!</string>
    <string name="thankyou_body3">There are no more tests to take.</string>
    <string name="thankyou_cycle_subhead2">You\'ve Finished This Cycle!</string>
    <string name="thankyou_cycle_body2">&lt;b>There are no tests to take right now.&lt;/b> Your next testing cycle will be &lt;b>{DATE1}&lt;/b> through &lt;b>{DATE2}&lt;/b>.</string>
    <string name="thankyou_alldone_subhead1">All Done for Today!</string>
    <string name="thankyou_alldone_body1">Thanks for your hard work. We\'ll notify you tomorrow with your next test.</string>
    <string name="availability_same_tuesday_friday">Do you usually wake up around &lt;b>{TIME1}&lt;/b> and go to bed around &lt;b>{TIME2}&lt;/b> on &lt;b>Tuesday - Friday&lt;/b> ?</string>
    <string name="availability_wake_saturday">When do you usually &lt;b>wake up&lt;/b> on &lt;b>Saturday&lt;/b>?</string>
    <string name="availability_sleep_saturday">When do you usually &lt;b>go to bed&lt;/b> on &lt;b>Saturday&lt;/b>?</string>
    <string name="availability_wake_sunday">When do you usually &lt;b>wake up&lt;/b> on &lt;b>Sunday&lt;/b>?</string>
    <string name="availability_sleep_sunday">When do you usually &lt;b>go to bed&lt;/b> on &lt;b>Sunday&lt;/b>?</string>
    <string name="notification_missed">You\'ve missed your tests. If you\'re unable \nto finish this week, please contact your site \ncoordinator.</string>
    <string name="notification_confirm">Please confirm your next testing start date.</string>
    <string name="notification_next">Your next test will be on {DATE}.</string>
    <string name="about_3rd_party_button"><u>3rd Party Materials</u></string>
    <string name="help_header">Help</string>
    <string name="help_body">If you have questions about this app, difficulties using the app, or any concerns about the study, please contact the study Investigator at the telephone number listed on the first page of your informed consent document.</string>
    <string name="about">About</string>
    <string name="Contact_header"></string>
    <string name="contact_body"></string>
    <string name="notification_confirm_adjust_1">Your next testing cycle will be &lt;b>{DATE1}&lt;/b> through &lt;b>{DATE2}&lt;/b>. Please confirm these testing dates or adjust your schedule. </string>
    <string name="scroll">Scroll</string>
    <string name="checkbox_commit">I understand</string>
    <string name="app_name">ARC 2.0</string>
    <string name="country_key">US</string>
    <string name="language_key">en</string>
    <string name="language_prefer">Please select your &lt;b>preferred language.&lt;/b></string>
    <string name="gen_welcome_key">Welcome to the &lt;b>ARC App&lt;/b></string>
    <string name="bysigning_key">By signing in you agree to our Privacy Policy.</string>
    <string name="privacy_linked">Privacy Policy</string>
    <string name="login_enter_raterID">Please enter the\n &lt;b>Site Code&lt;/b> below.</string>
    <string name="login_enter_ARCID">Please enter your\n&lt;b>ARC ID&lt;/b> below.</string>
    <string name="login_confirm_ARCID">For confirmation\n purposes, please\n&lt;b>re-enter your ARC ID&lt;/b>.</string>
    <string name="notification_monthbefore">Your next week of testing begins in one month, on {DATE}. You may adjust this schedule up to 7 days.</string>
    <string name="notification_weekbefore">Reminder: Your next testing cycle starts in one week. Tap to confirm or reschedule.</string>
    <string name="notification_daybefore">Reminder: Your next testing cycle begins tomorrow. Tap to confirm or reschedule.</string>
    <string name="notification1_firstday">It\'s time for the first test of the week! Start your streak by completing this test by {TIME}.</string>
    <string name="notification1_default">It\'s time for the first test of the day! This test will be available until {TIME}.</string>
    <string name="notification1_halfway">You\'re halfway through the week. Keep it up! Today\'s first test will be available until {TIME}.</string>
    <string name="notifications2_default">It\'s time for today\'s second test! This test will be available until {TIME}.</string>
    <string name="notification3_default">Your third test of the day is now available. Please complete this test by {TIME}.</string>
    <string name="notification4_default">The last test of the day is here! Finish strong by completing this test by {TIME}.</string>
    <string name="notification4_lastday">It\'s time to take your last test of the week! Please finish it by {TIME}. Your coordinator will contact you about your earnings shortly.</string>
    <string name="notification_testproctor_header">Test Scheduler Service Running</string>
    <string name="notification_testproctor_body">This ensures that you\'re notified of tests at the correct time.</string>
    <string name="button_viewfaq">VIEW FAQ</string>
    <string name="button_viewdetails">VIEW DETAILS</string>
    <string name="button_back">BACK</string>
    <string name="faq_subpage_subheader">Tap a question to see the answer.</string>
    <string name="faq_tech_header">Technical FAQ</string>
    <string name="faq_tech_q1">What do I do if I change phones?</string>
    <string name="faq_tech_q2">The app isn\'t working. What should I do?</string>
    <string name="faq_tech_q3">What data is being collected?</string>
    <string name="faq_tech_q4">How do I check if notifications are set up correctly?</string>
    <string name="earnings_body1">You will receive an &lt;b>Amazon Gift Card&lt;/b> for the earned amount after each week of testing.</string>
    <string name="earnings_weektotal">This Week</string>
    <string name="earnings_studytotal">Study Total</string>
    <string name="earnings_bonus_header">Bonus Goals</string>
    <string name="earnings_bonus_body">Complete the following testing goals to &lt;b>earn bonuses&lt;/b>.</string>
    <string name="earnings_details_header">Earnings Details</string>
</resources>