<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/secondary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@drawable/background_back_button"
                android:drawableLeft="@drawable/ic_arrow_left_white"
                android:drawablePadding="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:text="@string/button_back"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:visibility="invisible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/textViewHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="32dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/faq_tech_header"
                android:textColor="@color/white"
                android:textSize="26dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="50dp"
                android:layout_height="2dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:background="@color/yellow" />

            <TextView
                android:id="@+id/textViewSubheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginBottom="15dp"
                android:text="@string/faq_subpage_subheader"
                android:textColor="@color/tealSubheader" />

            <LinearLayout
                android:id="@+id/bottomLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/secondary"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/lineFrameLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#223465">

                </FrameLayout>

                <RelativeLayout
                    android:id="@+id/tech_q1"
                    android:layout_width="match_parent"
                    android:layout_height="75dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="64dp"
                        android:text="@string/faq_tech_q1"
                        android:textColor="@color/white"
                        android:textSize="17dp" />

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/background_back_button"
                        android:drawableEnd="@drawable/ic_arrow_right_white"
                        android:paddingRight="5dp"
                        android:textAllCaps="true"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <FrameLayout
                    android:id="@+id/lineFrameLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#223465">

                </FrameLayout>

                <RelativeLayout
                    android:id="@+id/tech_q2"
                    android:layout_width="match_parent"
                    android:layout_height="75dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="64dp"
                        android:text="@string/faq_tech_q2"
                        android:textColor="@color/white"
                        android:textSize="17dp" />

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/background_back_button"
                        android:drawableEnd="@drawable/ic_arrow_right_white"
                        android:paddingRight="5dp"
                        android:textAllCaps="true"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <FrameLayout
                    android:id="@+id/lineFrameLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#223465">

                </FrameLayout>

                <RelativeLayout
                    android:id="@+id/tech_q3"
                    android:layout_width="match_parent"
                    android:layout_height="75dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="64dp"
                        android:text="@string/faq_tech_q3"
                        android:textColor="@color/white"
                        android:textSize="17dp" />

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/background_back_button"
                        android:drawableEnd="@drawable/ic_arrow_right_white"
                        android:paddingRight="5dp"
                        android:textAllCaps="true"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <FrameLayout
                    android:id="@+id/lineFrameLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#223465">

                </FrameLayout>

                <RelativeLayout
                    android:id="@+id/tech_q4"
                    android:layout_width="match_parent"
                    android:layout_height="75dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="64dp"
                        android:text="@string/faq_tech_q4"
                        android:textColor="@color/white"
                        android:textSize="17dp" />

                    <TextView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/background_back_button"
                        android:drawableEnd="@drawable/ic_arrow_right_white"
                        android:paddingRight="5dp"
                        android:textAllCaps="true"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <FrameLayout
                    android:id="@+id/lineFrameLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#223465">

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
